# myPicasa

./: .gitignore  123.html  CHANGELOG.md  GEMINI.md  IMPROVEMENTS.md  MCP_SETUP_GUIDE.md  MCP_TROUBLESHOOTING.md  PDF_WATERMARK_GUIDE.md  PDF_WATERMARK_MARGIN_TIPS.md  PDF_WATERMARK_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  UI_DESIGN.md  UPGRADE_V6.md  cleanup_reference.py  cleanup_utf8.py  debug_pdf_merge.py  fix_picasa.py  main.py  picasa.py  picasa2.py  picasa3.py  picasa5.py  picasa6.py  rag_book_chapter_2_final.docx  rag_book_chapter_2_final.md  requirements.txt  run_tests.py  test_mcp_image_handling.py  test_pdf_watermark.py  videoMerge.py
.agent/: rules.md
backups/legacy/: picasa2.py
mcp_server/: README.md  __init__.py  claude_desktop_config.example.json  pyproject.toml  run_server.sh  server.py
openspec/: project.md
openspec/changes/add-drag-drop-preview/: proposal.md  tasks.md
openspec/changes/add-drag-drop-preview/specs/media-import/: spec.md
openspec/changes/add-pdf-password-and-auto-convert/: proposal.md  tasks.md
openspec/changes/add-pdf-password-and-auto-convert/specs/doc-tools/: spec.md
openspec/changes/add-settings-persistence/: proposal.md  tasks.md
tests/: __init__.py  picasa2.py  picasa4.py  test_image_utils.py  test_video_merge.py  verify_fix.py
utils/: __init__.py  batch_rename.py  config.py  config_manager.py  doc_converter.py  drag_drop.py  image_editor.py  image_utils.py  md2docx_converter.py  md_converter.py  modern_style.py  pdf_tools.py  pdf_worker.py  preview_widget.py  task_manager.py  watermark.py
(+1 files in other folders)
